--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="Old_Picture.jpg" alt="Picture"
+style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file!</p>
+<p>A new line in the file!</p>
 </body>
 </html>
