--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in the file!</p>
+<div><img src="Tiger.jpg.jpg" alt ="Image of Tiger" style = "width:100%;max-width:640px"></div>
+
+
 </body>
 </html>
